--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,6 @@
 name: flutter_starter
-description: Flutter project that serves as a starting point or template for other Flutter projects.
+description: Flutter project that serves as a starting point or template for
+  other Flutter projects.
 
 version: 1.0.0+1
 
@@ -14,10 +15,13 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.1.2
   flutter_dotenv: ^5.0.2
+  flutter_localizations:
+    sdk: flutter
   get_it: ^7.3.0
   http: ^0.13.5
-  intl: ^0.18.1
+  intl: any
   mockito: ^5.4.0
+  provider: ^6.0.5
   shared_preferences: ^2.1.0
   velocity_x: ^0.4.1
 
@@ -31,5 +35,6 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  generate: true
   # assets:
-    # - .env
+  # - .env
