--- a/.github/workflows/clean_code_check.yml
+++ b/.github/workflows/clean_code_check.yml
@@ -16,6 +16,9 @@ jobs:
       - name: Setup Flutter
         uses: subosito/flutter-action@v1
 
+      - name: Check Flutter Version
+        run: flutter --version
+
       - name: Install dependencies
         run: flutter pub get
 
